--- a/Story.html
+++ b/Story.html
@@ -1,10 +1,17 @@
-<html>
-    <body>
+! <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <div>This is my first story</div>
     <li>This is second change to the story</li>
     <div>This is third change to the story</div>
     <div>This is fourth change to the story</div>
     <div>This is fifth update to the story</div>
     <p>3/22/2022 - I cloned this from github and makeing the change</p>
-    </body>
+</body>
 </html>
